welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: type mismatch;
 found   : Unit
 required: Int
	for (k <- 0 to nums.length-1){
               ^