welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	for (k <- 0 to nums.length-1){
		if (value==nums(k)){
			return k
		}
	}
}
